third_party/move/move-compiler-v2/tests/reference-safety/unused_reference.no-opt.exp

Diagnostics:
error: use of unassigned local `y`
  ┌─ tests/reference-safety/unused_reference.move:6:9
  │
6 │         *y;
  │         ^^
